samples/_failures_safe/1761416887_ba456e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7502a6b.c: In function ‘handle_error’:
./samples/SAFE/__tmp_c7502a6b.c:167:5: error: expected declaration or statement at end of input
  167 |     if (ctx == NULL) return STATE_ERROR;
      |     ^~
